@@ -1,6 +1,6 @@
                    FUNCTION:NAME
-                exit_group:entry 
+                    getpid:entry   raised                           
 
 -- @@stderr --
-dtrace: script 'test/unittest/raise/tst.raise1.d' matched 5 probes
+dtrace: script 'test/unittest/raise/tst.raise1.d' matched 4 probes
 dtrace: allowing destructive actions
